@@ -76,6 +76,7 @@ Version 1.0.8  (not yet released)
 	Bug #11991 ExecuteScalar 	
 	Bug #14592 Wrong column length returned for VARCHAR UTF8 columns 
 	Bug #18391 Better error handling for the .NET class "MySqlCommand" needed. 	
+	Bug #8131 Data Adapter doesn't close connection 
 	
 Version 1.0.7
 
